# OOP4

./: CMakeLists.txt  example_coords.txt  main.cpp
include/: Array.h  Figure.h  Octagon.h  Square.h  Triangle.h  array.h  concept.h  figure.h  octagon.h  point.h  square.h  triangle.h
src/: main.cpp
test/: array_test.cpp  figure_test.cpp
tests/: CMakeLists.txt  test_array.cpp  test_figures.cpp  test_point.cpp  test_simple.cpp
